Thermospas iframe spacing issue fix

--- a/style.css
+++ b/style.css
@@ -144,7 +144,20 @@ article .dyo-promo.only-phone {
 	{
 		display: block !important;
 	}
+	
+	article.iframearticle
+	{
+		padding-left: 15px !important;
+		padding-right: 15px !important;
+	}
+	
+	article.iframearticle iframe
+	{
+		overflow-x: scroll !important; 
+		overflow-y: scroll !important;
+	}
 }
+
 @media only screen and (max-width : 480px) {
 	.warrantycol2 {
 		float: none;
